# tinyverse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: collapsing_cube.json  random_gravity_colissionless.json  random_without_velocity.json  spinning_disc_example.json
src/: common_types.hpp  config.h.in  main.cpp  resources.conf
src/app/: app.cpp  app.hpp  draw.cpp  events.cpp  init_sim.cpp
src/config/: config.hpp  config_generator.cpp  config_generator.hpp  config_generator_parser.cpp  config_loader.hpp  json_loader.cpp  json_loader.hpp
src/exceptions/: fatal_error.cpp  fatal_error.hpp
src/log/: log.cpp  log.hpp
src/physics/: CMakeLists.txt  common_types.hpp  initialize_universe.cpp  physics.hpp  step.cpp  universe.cpp  universe.hpp  universe_initializers.hpp  vector_3D.hpp
src/physics/gravity/: gravity_solver.hpp
src/physics/gravity/barnes_hut/: barnes_hut.cpp  barnes_hut.hpp
src/physics/gravity/naive/: naive_solver.cpp  naive_solver.hpp
src/physics/n-body/: gravity.cpp  integrator.cpp
src/physics/simulation/: compute_grawitational_forces.cpp  step.cpp
src/physics/universe_initializers/: base_initializer.hpp  initializer_factory.cpp  random_initializers.cpp  universe_initializers.hpp
src/physics/universe_initializers/random/: random_initializer.cpp  random_initializer.hpp
src/physics/universe_initializers/systems/: disc.cpp  disc.hpp  two_body.cpp  two_body.hpp
src/renderer/: particle_renderer.cpp  particle_renderer.hpp
src/shaders/: particle_shader.cpp  particle_shader.hpp
src/universe/: universe.cpp  universe.hpp
tests/: CMakeLists.txt
tests/test_integrator/: stability.cpp  test_integrator_stability_config.json
